--- a/_config.yml
+++ b/_config.yml
@@ -1,31 +1,31 @@
 # ----
 # Site
 
-title: Base
-url: "https://orange-ape.cloudvent.net/"
-baseurl:
+title: BetterDocs Documentation & Tutorials
+url: "https://betterdocs.us"
+baseurl: "https://betterdocs.us"
 google_analytics_key:
 disqus_shortname:
 newsletter_action:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Knowledge base template for Jekyll.
+description: Knowledge base template for BetterDiscord.
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Base Template
+  name: Chris
   links:
-    - https://github.com/CloudCannon/base-jekyll-template
+    - https://github.com/MrRobotjs/
 
 # -----
 # Build
 
-timezone: Etc/UTC
+#timezone: Etc/UTC
 
-permalink: /:categories/:title/
+permalink: pretty
 
 plugins:
   - jekyll-extract-element
