--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site values
 
-title: Discord Themes & Plugins | BetterDocs
+title: BetterDocs
 url: "https://betterdocs.us"
 baseurl:
 #google_analytics_key: UA-65593962-3
