--- a/admin/config.yml
+++ b/admin/config.yml
@@ -10,14 +10,17 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - {label: "Layout", name: "layout", widget: "hidden", default: "product"}
+      - label: "Layout"
+        name: "layout"
+        widget: "hidden"
+        default: "product"
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description_markdown", widget: "markdown"}
       - {label: "Author", name: "author", widget: "string"}
       - {label: "Github", name: "github", widget: "string"}
       - {label: "Download URL", name: "download", widget: "string"}
-      - {label: "Support URL", name: "download", widget: "string"}
-      - {label: "Demo URL", name: "download", widget: "string", default: "https://rawcdn.githack.com/USER/REPO/master/"}
+      - {label: "Support URL", name: "support", widget: "string"}
+      - {label: "Demo URL", name: "demo", widget: "string", default: "https://rawcdn.githack.com/USER/REPO/master/"}
       - {label: "Image", name: "image", widget: "image"}
       - {label: "Name", name: "name", widget: "string"}
       - {label: "Tags (Seperated by comma ',')", name: "style", widget: "string"}
