--- a/admin/config.yml
+++ b/admin/config.yml
@@ -36,15 +36,20 @@ collections:
         name: "demo"
         widget: "string"
         default: "https://rawcdn.githack.com/USER/REPO/master/"
-      - label: "Image"
-        name: "image"
-        widget: "image"
-      - label: "Name"
-        name: "name"
-        widget: "string"
+      - label: "Images"
+        name: "images"
+        - label: "Image"
+          name: "image"
+          widget: "image"
+        - label: "Name"
+          name: "name"
+          widget: "string"
       - label: "Tags (Seperated by comma ',')" 
-        name: "style"
+        name: "tags"
         widget: "string"
+      - label: "Github Comment ID" 
+        name: "ghcommentid"
+        widget: "number"
       - label: "Style (dark/light)" 
         name: "style"
         widget: "string" 
@@ -80,15 +85,20 @@ collections:
       - label: "Support URL"
         name: "support"
         widget: "string"
-      - label: "Image"
-        name: "image"
-        widget: "image"
-      - label: "Name"
-        name: "name"
-        widget: "string"
+      - label: "Images"
+        name: "images"
+        - label: "Image"
+          name: "image"
+          widget: "image"
+        - label: "Name"
+          name: "name"
+          widget: "string"
       - label: "Tags (Seperated by comma ',')" 
         name: "style"
         widget: "string"
+      - label: "Github Comment ID" 
+        name: "ghcommentid"
+        widget: "number"
       - label: "Publish Date"
         name: "date" 
         widget: "datetime"
