--- a/admin/config.yml
+++ b/admin/config.yml
@@ -38,12 +38,12 @@ collections:
         default: "https://rawcdn.githack.com/USER/REPO/master/"
       - label: "Images"
         name: "images"
-        - label: "Image"
-          name: "image"
-          widget: "image"
-        - label: "Name"
-          name: "name"
-          widget: "string"
+      - label: "Image"
+        name: "image"
+        widget: "image"
+      - label: "Name"
+        name: "name"
+        widget: "string"
       - label: "Tags (Seperated by comma ',')" 
         name: "tags"
         widget: "string"
@@ -52,7 +52,8 @@ collections:
         widget: "number"
       - label: "Style (dark/light)" 
         name: "style"
-        widget: "string" 
+        widget: "select"
+        options: ["dark", "light"]
         default: "dark"
       - label: "Publish Date"
         name: "date" 
@@ -87,14 +88,14 @@ collections:
         widget: "string"
       - label: "Images"
         name: "images"
-        - label: "Image"
-          name: "image"
-          widget: "image"
-        - label: "Name"
-          name: "name"
-          widget: "string"
+      - label: "Image"
+        name: "image"
+        widget: "image"
+      - label: "Name"
+        name: "name"
+        widget: "string"
       - label: "Tags (Seperated by comma ',')" 
-        name: "style"
+        name: "tags"
         widget: "string"
       - label: "Github Comment ID" 
         name: "ghcommentid"
