--- a/admin/config.yml
+++ b/admin/config.yml
@@ -89,6 +89,7 @@ collections:
         widget: "string"
       - label: "Images"
         name: "images"
+        - {label: "Image", name: "image", widget: "image"}
       - label: "Image"
         name: "image"
         widget: "image"
