--- a/admin/config.yml
+++ b/admin/config.yml
@@ -89,7 +89,6 @@ collections:
         widget: "string"
       - label: "Images"
         name: "images"
-        - {label: "Image", name: "image", widget: "image"}
       - label: "Image"
         name: "image"
         widget: "image"
@@ -106,3 +105,8 @@ collections:
       - label: "Publish Date"
         name: "date" 
         widget: "datetime"
+      - label: "Card Authors"
+        name: "authors"
+        widget: "list"
+        field:
+          - { label: "Name", name: "name", widget: "string" }
