--- a/admin/config.yml
+++ b/admin/config.yml
@@ -9,8 +9,8 @@ collections:
     folder: "_themes/" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    delete: false
     fields: # The fields for each document, usually in front matter
-      - label: "Layout"
         name: "layout"
         widget: "hidden"
         default: "product"
@@ -62,6 +62,7 @@ collections:
     folder: "_pluginss/" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    delete: false
     fields: # The fields for each document, usually in front matter
       - label: "Layout"
         name: "layout"
