--- a/admin/config.yml
+++ b/admin/config.yml
@@ -10,6 +10,7 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     delete: false
+    media_folder: "images/themes"
     fields: # The fields for each document, usually in front matter
       - label: "Layout"
         name: "layout"
@@ -57,6 +58,7 @@ collections:
     folder: "_pluginss/" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    media_folder: "images/plugins"
     delete: false
     fields: # The fields for each document, usually in front matter
       - label: "Layout"
