--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: gh-pages # Branch to update (optional; defaults to master)
 publish_mode: editorial_workflow
-media_folder: "images/" # Media files will be stored in the repo under images/uploads
+media_folder: "images/user_uploads" # Media files will be stored in the repo under images/uploads
 collections:
   - name: "themes" # Used in routes, e.g., /admin/collections/blog
     label: "Themes" # Used in the UI
