--- a/admin/config.yml
+++ b/admin/config.yml
@@ -19,21 +19,25 @@ collections:
       - label: "Title"
         name: "title"
         widget: "string"
+        default: "Theme Title"
       - label: "Description"
         name: "description_markdown"
         widget: "markdown"
       - label: "Author"
         name: "author" 
         widget: "string"
+        default: "Author"
       - label: "Github" 
         name: "github"
         widget: "string"
+        default: "https://github.com/Author/"
       - label: "Download URL"
         name: "download"
         widget: "string"
       - label: "Support URL"
         name: "support"
         widget: "string"
+        default: "https://discord.gg/invite"
       - label: "Demo URL"
         name: "demo"
         widget: "string"
@@ -68,21 +72,25 @@ collections:
       - label: "Title"
         name: "title"
         widget: "string"
+        default: "Plugin Title"
       - label: "Description"
         name: "description_markdown"
         widget: "markdown"
       - label: "Author"
         name: "author" 
         widget: "string"
+        default: "Author"
       - label: "Github" 
         name: "github"
         widget: "string"
+        default: "https://github.com/Author/"
       - label: "Download URL"
         name: "download"
         widget: "string"
       - label: "Support URL"
         name: "support"
         widget: "string"
+        default: "https://discord.gg/invite"
       - label: "Tags (Seperated by comma ',')" 
         name: "tags"
         widget: "string"
