--- a/admin/config.yml
+++ b/admin/config.yml
@@ -45,6 +45,7 @@ collections:
       - label: "Tags (Seperated by comma ',')" 
         name: "tags"
         widget: "string"
+        required: false
       - label: "Style" 
         name: "style"
         widget: "select"
@@ -94,6 +95,7 @@ collections:
       - label: "Tags (Seperated by comma ',')" 
         name: "tags"
         widget: "string"
+        required: false
       - label: "Github Comment ID" 
         name: "ghcommentid"
         widget: "number"
