--- a/admin/config.yml
+++ b/admin/config.yml
@@ -31,6 +31,16 @@ collections:
         name: "github"
         widget: "string"
         default: "https://github.com/Author/"
+      - label: "Images"
+        name: "images"
+        widget: "list"
+        fields:
+          - label: "Image Name"
+            name: "name"
+            widget: "string"
+          - label: "Image"
+            name: "image"
+            widget: "image"
       - label: "Download URL"
         name: "download"
         widget: "string"
@@ -85,6 +95,17 @@ collections:
         name: "github"
         widget: "string"
         default: "https://github.com/Author/"
+      - label: "Images"
+        name: "images"
+        required: false
+        widget: "list"
+        fields:
+          - label: "Image Name"
+            name: "name"
+            widget: "string"
+          - label: "Image"
+            name: "image"
+            widget: "image"
       - label: "Download URL"
         name: "download"
         widget: "string"
