--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,11 @@
   link: https://betterdocs.us/themes/
 - name: Plugins
   link: https://betterdocs.us/plugins/
-- name: Tutorials
+- name: Server
+  link: https://discord.gg/D4cAkXX
+- name: Download
+  link: https://betterdocs.us
+- name: Getting Started
   link: /
 - name: Videos
   link: /videos/
