Admin config change

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -45,6 +45,9 @@ collections:
       - label: "Download URL"
         name: "download"
         widget: "string"
+      - label: "Auto Download?"
+        name: "auto"
+        widget: "boolean"
       - label: "Support URL"
         name: "support"
         widget: "string"
@@ -110,6 +113,9 @@ collections:
       - label: "Download URL"
         name: "download"
         widget: "string"
+      - label: "Auto Download?"
+        name: "auto"
+        widget: "boolean"
       - label: "Support URL"
         name: "support"
         widget: "string"
