Filters work now

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -58,8 +58,11 @@ collections:
         default: "https://rawcdn.githack.com/USER/REPO/master/"
       - label: "Tags (Seperated by comma ',')" 
         name: "tags"
-        widget: "string"
+        widget: "list"
         required: false
+      - label: "Supported Software (Seperated by comma ',')" 
+        name: "software"
+        widget: "list"
       - label: "Style" 
         name: "style"
         widget: "select"
@@ -122,8 +125,11 @@ collections:
         default: "https://discord.gg/invite"
       - label: "Tags (Seperated by comma ',')" 
         name: "tags"
-        widget: "string"
+        widget: "list"
         required: false
+      - label: "Supported Software (Seperated by comma ',')" 
+        name: "software"
+        widget: "list"
       - label: "Github Comment ID" 
         name: "ghcommentid"
         widget: "number"
